# travel_assistant

./: .gitignore  README.md  main.py  pyproject.toml
RAG/: ingestion.py  query_rag.py
agents/: extra.py  hotel_pricing.py  hotels_osm.py  licenced_entities.py  mk_places.py  nairobihotels.py  park_data.py  park_prices.py  parks.py
data/clean_data/: cleandata.md  kenyan_campsites.json  kenyan_hotels.json  kws_prices.json  nai_hotels.json  parks_data.json
data/gold_data/: kenyan_campsites.txt  kenyan_hotels.txt  kws_prices.txt  magical_kenya.txt  nairobi_hotels.txt  parks.txt  parks_chunks.jsonl
data/raw_data/: entities.json  kenyan_campsites.json  kenyan_hotels.json  magicalkenya_categories.json  magicalkenya_places.json  mk_adventures.json  mk_getaways.json  nairobi_hotels.json  parks_data.json
data/staging_data/: kenyan_hotels.json
extraction/: extract.py  licenced_entities.py  mk_getaway_xp.py  mk_travel_category.py  park_prices.py  parks.py  safaris.py
scripts/: serialize_json.py
static/css/: styles.css
templates/: index.html
transformation/: data_stats.py  flat_camps.py  flat_hotels.py  flat_mk.py  flat_parks.py  flat_prices.py  flattened.py  k_hotels.py  kws_prices.py  nai_hotels.py
transformation/data_stats/: data_stats.ipynb
